--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,1 @@
-title:       Glitzersachen
-
-host:        0.0.0.0
-port:        4000
-baseurl:     /
-url:         http://localhost:4000
-
-
-
-
-
+_sitepack/Glitzersachen/config.yml
